# autozakaz_bot

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/about/: admin.py  models.py  urls.py  views.py
backend/about/api/: serializers.py  urls.py  views.py
backend/about/migrations/: 0001_initial.py  0002_oferta.py  0003_oferta_name.py  0004_oferta_oferta_file.py  0005_gdpr.py
backend/api_client/: __init__.py  base.py  order.py  search.py
backend/base/: enums.py  managers.py  models.py
backend/base/context_processors/: project_name.py
backend/base/templatetags/: pagination_tags.py
backend/core/: celery.py  settings.py  urls.py
backend/import_goods/: admin.py  apps.py  constansts.py  import_csv.py  models.py  tasks.py
backend/import_goods/import_handlers/: base.py  import_api.py  import_csv.py
backend/import_goods/migrations/: 0001_initial.py  0002_importtask_scheduled_at.py  0002_initial.py  0003_csvimportlog.py  0004_alter_csvimportlog_options.py
backend/orders/: admin.py  models.py  tasks.py  views.py
backend/orders/api/: serializers.py  urls.py  views.py
backend/orders/migrations/: 0001_initial.py  0002_alter_orderitem_price.py  0003_orderitem_comment.py  0004_alter_orderitem_options.py
backend/orders/templates/: expired.html  robokassa_redirect.html
backend/payment/: robokassa.py
backend/products/: admin.py  filters.py  models.py  urls.py  views.py
backend/products/api/: urls.py  (+2 more)
backend/templates/: base.html
backend/users/: admin.py  models.py
(+58 files in other folders)
